[package]
name = "playtone"
version = "1.0.0"
authors = ["Tage Johansson"]
description = "Play a single (sine wave) tone forever"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
clap = { version = "3.2.17", features = ["derive"] }
ctrlc = "3.2.2"
rodio = { version = "0.15.0", default-features = false }
